--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bleach==2.1.1
 cycler==0.10.0
 decorator==4.1.2
 entrypoints==0.2.3
+ExifRead==2.1.2
 html5lib==1.0b10
 ipykernel==4.6.1
 ipython==6.2.1
