--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ cycler==0.10.0
 decorator==4.1.2
 entrypoints==0.2.3
 ExifRead==2.1.2
+google-api-python-client==1.6.4
 html5lib==1.0b10
+httplib2==0.10.3
 ipykernel==4.6.1
 ipython==6.2.1
 ipython-genutils==0.2.0
@@ -28,6 +30,7 @@ nbformat==4.4.0
 networkx==2.0
 notebook==5.1.0
 numpy==1.13.3
+oauth2client==4.1.2
 olefile==0.44
 pandas==0.20.3
 pandocfilters==1.4.2
@@ -37,6 +40,8 @@ pickleshare==0.7.4
 Pillow==4.3.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
 pycodestyle==2.3.1
 Pygments==2.2.0
 pylint==1.7.4
@@ -48,6 +53,7 @@ pyzbar==0.1.4
 pyzmq==16.0.2
 qrcode==5.3
 qtconsole==4.3.1
+rsa==3.4.2
 scikit-image==0.13.1
 scikit-learn==0.19.0
 scipy==0.19.1
@@ -57,6 +63,7 @@ terminado==0.6
 testpath==0.3.1
 tornado==4.5.2
 traitlets==4.3.2
+uritemplate==3.0.0
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.0.3
