--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 astroid==1.5.3
 autopep8==1.3.3
 bleach==2.1.1
+certifi==2017.11.5
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.1.2
+dropbox==8.5.0
 entrypoints==0.2.3
 ExifRead==2.1.2
 google-api-python-client==1.6.4
 html5lib==1.0b10
 httplib2==0.10.3
+idna==2.6
 ipykernel==4.6.1
 ipython==6.2.1
 ipython-genutils==0.2.0
@@ -53,6 +57,7 @@ pyzbar==0.1.4
 pyzmq==16.0.2
 qrcode==5.3
 qtconsole==4.3.1
+requests==2.18.4
 rsa==3.4.2
 scikit-image==0.13.1
 scikit-learn==0.19.0
@@ -64,6 +69,7 @@ testpath==0.3.1
 tornado==4.5.2
 traitlets==4.3.2
 uritemplate==3.0.0
+urllib3==1.22
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.0.3
