--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
 astroid==1.5.3
 autopep8==1.3.3
 bleach==2.1.1
-configparser==3.5.0
+certifi==2017.11.5
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.1.2
+dropbox==8.5.0
 entrypoints==0.2.3
 ExifRead==2.1.2
-future==0.16.0
-google-api-python-client==1.6.4
+google-api-python-client==1.6.5
 html5lib==1.0b10
 httplib2==0.10.3
+idna==2.6
 ipykernel==4.6.1
 ipython==6.2.1
 ipython-genutils==0.2.0
@@ -17,7 +19,6 @@ ipywidgets==7.0.1
 isort==4.2.15
 jedi==0.11.0
 Jinja2==2.9.6
-json-rpc==1.10.8
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.1.0
@@ -41,41 +42,36 @@ parso==0.1.0
 pexpect==4.2.1
 pickleshare==0.7.4
 Pillow==4.3.0
-pluggy==0.6.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycodestyle==2.3.1
-pydocstyle==2.1.1
-pyflakes==1.6.0
 Pygments==2.2.0
 pylint==1.7.4
 pyparsing==2.2.0
 python-dateutil==2.6.1
-python-language-server==0.12.0
 pytz==2017.2
 PyWavelets==0.5.2
 pyzbar==0.1.4
 pyzmq==16.0.2
 qrcode==5.3
 qtconsole==4.3.1
-rope==0.10.7
+requests==2.18.4
 rsa==3.4.2
 scikit-image==0.13.1
 scikit-learn==0.19.0
 scipy==0.19.1
 simplegeneric==0.8.1
 six==1.11.0
-snowballstemmer==1.2.1
 terminado==0.6
 testpath==0.3.1
 tornado==4.5.2
 traitlets==4.3.2
 uritemplate==3.0.0
+urllib3==1.22
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.0.3
 wrapt==1.10.11
-yapf==0.20.0
 zbarlight==1.2
