--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,20 @@ autopep8==1.3.3
 bleach==2.1.1
 certifi==2017.11.5
 chardet==3.0.4
+click==6.7
+click-plugins==1.0.3
+cligj==0.4.0
+configparser==3.5.0
 cycler==0.10.0
 decorator==4.1.2
+descartes==1.1.0
 dropbox==8.5.0
 entrypoints==0.2.3
 ExifRead==2.1.2
+Fiona==1.7.11.post1
+future==0.16.0
+geopandas==0.3.0
+geopy==1.11.0
 google-api-python-client==1.6.5
 html5lib==1.0b10
 httplib2==0.10.3
@@ -19,6 +28,7 @@ ipywidgets==7.0.1
 isort==4.2.15
 jedi==0.11.0
 Jinja2==2.9.6
+json-rpc==1.10.8
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.1.0
@@ -29,6 +39,7 @@ MarkupSafe==1.0
 matplotlib==2.1.0
 mccabe==0.6.1
 mistune==0.7.4
+munch==2.2.0
 nbconvert==5.3.1
 nbformat==4.4.0
 networkx==2.0
@@ -42,15 +53,21 @@ parso==0.1.0
 pexpect==4.2.1
 pickleshare==0.7.4
 Pillow==4.3.0
+pluggy==0.6.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycodestyle==2.3.1
+pydocstyle==2.1.1
+pyflakes==1.6.0
 Pygments==2.2.0
 pylint==1.7.4
 pyparsing==2.2.0
+pyproj==1.9.5.1
+PySAL==1.14.3
 python-dateutil==2.6.1
+python-language-server==0.12.0
 pytz==2017.2
 PyWavelets==0.5.2
 pyzbar==0.1.4
@@ -58,15 +75,20 @@ pyzmq==16.0.2
 qrcode==5.3
 qtconsole==4.3.1
 requests==2.18.4
+rope==0.10.7
 rsa==3.4.2
+Rtree==0.8.3
 scikit-image==0.13.1
 scikit-learn==0.19.0
 scipy==0.19.1
+Shapely==1.6.4.post1
 simplegeneric==0.8.1
 six==1.11.0
+snowballstemmer==1.2.1
 terminado==0.6
 testpath==0.3.1
 tornado==4.5.2
+tqdm==4.19.5
 traitlets==4.3.2
 uritemplate==3.0.0
 urllib3==1.22
@@ -74,4 +96,5 @@ wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.0.3
 wrapt==1.10.11
+yapf==0.20.0
 zbarlight==1.2
