--- a/requirements.txt
+++ b/requirements.txt
@@ -1,101 +1,122 @@
-astroid==1.5.3
-autopep8==1.3.3
-bleach==2.1.1
-certifi==2017.11.5
+acme==0.19.0
+asn1crypto==0.22.0
+astroid==1.6.1
+attrs==17.2.0
+autobahn==0.14.1
+autopep8==1.3.4
+backports.functools-lru-cache==1.5
+beautifulsoup4==4.6.0
+cbor==0.1.24
+certbot==0.19.0
+certifi==2017.4.17
 chardet==3.0.4
 click==6.7
-click-plugins==1.0.3
-cligj==0.4.0
+colorama==0.3.7
+ConfigArgParse==0.11.0
+configobj==5.0.6
 configparser==3.5.0
+constantly==15.1.0
+cryptography==1.9
 cycler==0.10.0
-decorator==4.1.2
-descartes==1.1.0
-dropbox==8.5.0
-entrypoints==0.2.3
-ExifRead==2.1.2
-Fiona==1.7.11.post1
-future==0.16.0
-geopandas==0.3.0
-geopy==1.11.0
-google-api-python-client==1.6.5
-html5lib==1.0b10
-httplib2==0.10.3
-idna==2.6
-ipykernel==4.6.1
-ipython==6.2.1
-ipython-genutils==0.2.0
-ipywidgets==7.0.1
-isort==4.2.15
+dnspython==1.15.0
+duplicity==0.7.12
+enum34==1.1.6
+flake8==3.5.0
+funcsigs==1.0.2
+functools32==3.2.3.post2
+future==0.15.2
+futures==3.2.0
+GDAL==2.2.1
+greenlet==0.4.11
+gyp==0.1
+html5lib==0.999999999
+httplib2==0.9.2
+idna==2.5
+incremental==16.10.1
+ipaddress==1.0.17
+isort==4.3.4
 jedi==0.11.0
 Jinja2==2.9.6
+joblib==0.10.4.dev0
 json-rpc==1.10.8
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.1.0
-jupyter-console==5.2.0
-jupyter-core==4.3.0
+keyring==10.4.0
+keyrings.alt==2.2
 lazy-object-proxy==1.3.1
+lockfile==0.12.2
+lxml==4.0.0
+lz4==0.8.2
 MarkupSafe==1.0
-matplotlib==2.1.0
+matplotlib==2.0.0
 mccabe==0.6.1
-mistune==0.7.4
-munch==2.2.0
-nbconvert==5.3.1
-nbformat==4.4.0
-networkx==2.0
-notebook==5.1.0
-numpy==1.13.3
-oauth2client==4.1.2
+mercurial==4.3.1
+mock==2.0.0
+mpi4py==2.0.0
+msgpack-python==0.4.8
+ndg-httpsclient==0.4.3
+neovim==0.1.13
+numpy==1.12.1
 olefile==0.44
-pandas==0.20.3
-pandocfilters==1.4.2
+PAM==0.4.2
+parsedatetime==2.4
 parso==0.1.0
+pbr==2.0.0
+pep257==0.7.0
 pep8==1.7.1
-pexpect==4.2.1
-pickleshare==0.7.4
-Pillow==4.3.0
-pluggy==0.6.0
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
+Pillow==4.1.1
+pluggy==0.5.2
+protobuf==3.2.0
+psutil==5.0.1
+psycopg2==2.7.3
+py==1.4.34
+pyasn1==0.1.9
+pyasn1-modules==0.0.7
 pycodestyle==2.3.1
+pycrypto==2.6.1
 pydocstyle==2.1.1
 pyflakes==1.6.0
 Pygments==2.2.0
-pylint==1.7.4
-pyparsing==2.2.0
-pyproj==1.9.5.1
-PySAL==1.14.3
-python-dateutil==2.6.1
-python-language-server==0.12.0
+pygobject==3.24.1
+PyICU==1.9.5
+pylint==1.8.2
+PyNaCl==1.1.1
+PyOpenGL==3.1.0
+pyOpenSSL==17.3.0
+pyparsing==2.1.10
+pyRFC3339==1.0
+pyserial==3.4
+pyspatialite==3.0.1
+Pyste==0.9.10
+pytest==3.1.3
+python-apt==1.4.0b3
+python-dateutil==2.6.0
+python-language-server==0.11.1
+python-snappy==0.5
+python2-pythondialog==3.3.0
 pytz==2017.2
-PyWavelets==0.5.2
-pyzbar==0.1.4
-pyzmq==16.0.2
+pyxdg==0.25
+PyYAML==3.12
 qrcode==5.3
-qtconsole==4.3.1
-requests==2.18.4
-rope==0.10.7
-rsa==3.4.2
-Rtree==0.8.3
-scikit-image==0.13.1
-scikit-learn==0.19.0
-scipy==0.19.1
-Shapely==1.6.4.post1
-simplegeneric==0.8.1
+requests==2.18.1
+rope==0.10.5
+scour==0.32
+SecretStorage==2.3.1
+service-identity==16.0.0
+Shapely==1.6.0
+simplejson==3.11.1
+singledispatch==3.4.0.3
 six==1.11.0
 snowballstemmer==1.2.1
-terminado==0.6
-testpath==0.3.1
-tornado==4.5.2
+subprocess32==3.2.7
 tqdm==4.19.5
-traitlets==4.3.2
-uritemplate==3.0.0
-urllib3==1.22
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.0.3
+trollius==2.0.1
+Twisted==16.6.0
+txaio==2.8.0
+urllib3==1.21.1
+virtualenv==15.1.0
+webencodings==0.5
 wrapt==1.10.11
-yapf==0.20.0
-zbarlight==1.2
+yapf==0.19.0
+zope.component==4.3.0
+zope.event==4.2.0
+zope.hookable==4.0.4
+zope.interface==4.3.2
