Revert "Move to consistent cookie cutter format"
This reverts commit 8ee4d03044c34f85c2a131a0017477f79b4061b2.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-.env
-/venv/
-/old/
-/data/
-temp/
+venv/
+old/
+docs/
+data/
+output/
 .ipynb_checkpoints
 .ropeproject
+.idea
 __pycache__
 junk*
