--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,26 @@
 venv/
+
 old/
-docs/
-data/
+old2/
+
 output/
+
 .ipynb_checkpoints
+
 .ropeproject
 .idea
+
 __pycache__
+
 junk*
+temp/
+
+data/external/*
+!data/external/.gitkeep
+data/interim/*
+!data/interim/.gitkeep
+data/processed/*
+!data/processed/.gitkeep
+data/raw/*
+!data/raw/.gitkeep
+
