--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,69 @@
+bleach==2.1.3
 click==6.7
 click-plugins==1.0.3
 cligj==0.4.0
 cycler==0.10.0
 DateTime==4.2
+decorator==4.2.1
 descartes==1.1.0
+entrypoints==0.2.3
 ExifRead==2.1.2
 Fiona==1.7.11.post1
 geopandas==0.3.0
 google-api-python-client==1.6.5
+html5lib==1.0.1
 httplib2==0.10.3
+ipykernel==4.8.2
+ipython==6.2.1
+ipython-genutils==0.2.0
+ipywidgets==7.1.2
+jedi==0.11.1
 Jinja2==2.10
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
 kiwisolver==1.0.1
 MarkupSafe==1.0
 matplotlib==2.2.0
+mistune==0.8.3
 munch==2.2.0
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.4.1
 numpy==1.14.1
 oauth2client==4.1.2
 pandas==0.22.0
+pandocfilters==1.4.2
+parso==0.1.1
+pexpect==4.4.0
+pickleshare==0.7.4
 Pillow==5.0.0
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
+Pygments==2.2.0
 pyparsing==2.2.0
 pyproj==1.9.5.1
 python-dateutil==2.6.1
 pytz==2018.3
+pyzmq==17.0.0
+qtconsole==4.3.1
 rsa==3.4.2
+Send2Trash==1.5.0
 Shapely==1.6.4.post1
+simplegeneric==0.8.1
 six==1.11.0
+terminado==0.8.1
+testpath==0.3.1
+tornado==5.0.1
+traitlets==4.3.2
 uritemplate==3.0.0
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.1.4
+yapf==0.21.0
 zbarlight==2.0
 zope.interface==4.4.3
