--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+astroid==1.6.2
 bleach==2.1.3
 click==6.7
 click-plugins==1.0.3
@@ -17,16 +18,27 @@ ipykernel==4.8.2
 ipython==6.2.1
 ipython-genutils==0.2.0
 ipywidgets==7.1.2
+isort==4.3.4
 jedi==0.11.1
 Jinja2==2.10
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.3
 jupyter-console==5.2.0
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.4.0
 jupyter-core==4.4.0
+jupyter-highlight-selected-word==0.1.0
+jupyter-latex-envs==1.4.4
+jupyter-nbextensions-configurator==0.4.0
+jupyterlab==0.31.12
+jupyterlab-launcher==0.10.5
 kiwisolver==1.0.1
+lazy-object-proxy==1.3.1
+lxml==4.2.1
 MarkupSafe==1.0
 matplotlib==2.2.0
+mccabe==0.6.1
 mistune==0.8.3
 munch==2.2.0
 nbconvert==5.3.1
@@ -35,20 +47,24 @@ notebook==5.4.1
 numpy==1.14.1
 oauth2client==4.1.2
 pandas==0.22.0
+pandoc==1.0.2
 pandocfilters==1.4.2
 parso==0.1.1
 pexpect==4.4.0
 pickleshare==0.7.4
 Pillow==5.0.0
+ply==3.11
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 Pygments==2.2.0
+pylint==1.8.3
 pyparsing==2.2.0
 pyproj==1.9.5.1
 python-dateutil==2.6.1
 pytz==2018.3
+PyYAML==3.12
 pyzmq==17.0.0
 qtconsole==4.3.1
 rsa==3.4.2
@@ -64,6 +80,7 @@ uritemplate==3.0.0
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.1.4
+wrapt==1.10.11
 yapf==0.21.0
 zbarlight==2.0
 zope.interface==4.4.3
