--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 astroid==1.6.2
 bleach==2.1.3
+certifi==2018.1.18
+chardet==3.0.4
 click==6.7
 click-plugins==1.0.3
 cligj==0.4.0
@@ -7,6 +9,7 @@ cycler==0.10.0
 DateTime==4.2
 decorator==4.2.1
 descartes==1.1.0
+dropbox==8.7.1
 entrypoints==0.2.3
 ExifRead==2.1.2
 Fiona==1.7.11.post1
@@ -14,6 +17,7 @@ geopandas==0.3.0
 google-api-python-client==1.6.5
 html5lib==1.0.1
 httplib2==0.10.3
+idna==2.6
 ipykernel==4.8.2
 ipython==6.2.1
 ipython-genutils==0.2.0
@@ -63,10 +67,12 @@ pylint==1.8.3
 pyparsing==2.2.0
 pyproj==1.9.5.1
 python-dateutil==2.6.1
+python-dotenv==0.8.2
 pytz==2018.3
 PyYAML==3.12
 pyzmq==17.0.0
 qtconsole==4.3.1
+requests==2.18.4
 rsa==3.4.2
 Send2Trash==1.5.0
 Shapely==1.6.4.post1
@@ -75,8 +81,10 @@ six==1.11.0
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.0.1
+tqdm==4.19.8
 traitlets==4.3.2
 uritemplate==3.0.0
+urllib3==1.22
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.1.4
