--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ decorator==4.2.1
 descartes==1.1.0
 dropbox==8.7.1
 entrypoints==0.2.3
+et-xmlfile==1.0.1
 ExifRead==2.1.2
 Fiona==1.7.11.post1
 future==0.16.0
@@ -26,6 +27,7 @@ ipython==6.3.1
 ipython-genutils==0.2.0
 ipywidgets==7.2.1
 isort==4.3.4
+jdcal==1.4
 jedi==0.11.1
 Jinja2==2.10
 jsonschema==2.6.0
@@ -53,6 +55,7 @@ nbformat==4.4.0
 notebook==5.4.1
 numpy==1.14.2
 oauth2client==4.1.2
+openpyxl==2.5.3
 pandas==0.22.0
 pandoc==1.0.2
 pandocfilters==1.4.2
