--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,29 @@
-astroid==1.6.3
-autopep8==1.3.5
-backcall==0.1.0
-bleach==2.1.3
-certifi==2018.1.18
+cachetools==2.1.0
+certifi==2018.4.16
 chardet==3.0.4
-click==6.7
-click-plugins==1.0.3
-cligj==0.4.0
-cycler==0.10.0
-DateTime==4.2
-decorator==4.2.1
-descartes==1.1.0
-dropbox==8.7.1
-entrypoints==0.2.3
+dropbox==8.9.0
 et-xmlfile==1.0.1
-ExifRead==2.1.2
-Fiona==1.7.11.post1
-future==0.16.0
-geopandas==0.3.0
-google-api-python-client==1.6.6
-html5lib==1.0.1
+google-api-python-client==1.7.3
+google-auth==1.5.0
+google-auth-httplib2==0.0.3
 httplib2==0.11.3
 idna==2.6
-ipykernel==4.8.2
-ipython==6.3.1
-ipython-genutils==0.2.0
-ipywidgets==7.2.1
-isort==4.3.4
 jdcal==1.4
-jedi==0.11.1
 Jinja2==2.10
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==5.2.0
-jupyter-contrib-core==0.3.3
-jupyter-contrib-nbextensions==0.5.0
-jupyter-core==4.4.0
-jupyter-highlight-selected-word==0.2.0
-jupyter-latex-envs==1.4.4
-jupyter-nbextensions-configurator==0.4.0
-jupyterlab==0.31.12
-jupyterlab-launcher==0.10.5
-kiwisolver==1.0.1
-lazy-object-proxy==1.3.1
-lxml==4.2.1
 MarkupSafe==1.0
-matplotlib==2.2.2
-mccabe==0.6.1
-mistune==0.8.3
-munch==2.3.1
-nbconvert==5.3.1
-nbformat==4.4.0
-notebook==5.4.1
-numpy==1.14.2
+numpy==1.14.4
 oauth2client==4.1.2
-openpyxl==2.5.3
-pandas==0.22.0
-pandoc==1.0.2
-pandocfilters==1.4.2
-parso==0.1.1
-pexpect==4.4.0
-pickleshare==0.7.4
+openpyxl==2.5.4
+pandas==0.23.0
 Pillow==5.1.0
-pluggy==0.6.0
-ply==3.11
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-pyasn1==0.4.2
+pyasn1==0.4.3
 pyasn1-modules==0.2.1
-pycodestyle==2.4.0
-pydocstyle==2.1.1
-pyflakes==1.6.0
-Pygments==2.2.0
-pylama==7.4.3
-pylint==1.8.4
-pyparsing==2.2.0
-pyproj==1.9.5.1
-python-dateutil==2.7.2
+python-dateutil==2.7.3
 python-dotenv==0.8.2
-python-language-server==0.17.1
 pytz==2018.4
-PyYAML==3.12
-pyzmq==17.0.0
-qtconsole==4.3.1
 requests==2.18.4
-rope==0.10.7
 rsa==3.4.2
-Send2Trash==1.5.0
-Shapely==1.6.4.post1
-simplegeneric==0.8.1
 six==1.11.0
-snowballstemmer==1.2.1
-terminado==0.8.1
-testpath==0.3.1
-tornado==5.0.2
-tqdm==4.22.0
-traitlets==4.3.2
 uritemplate==3.0.0
 urllib3==1.22
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.2.1
-wrapt==1.10.11
-yapf==0.21.0
-zbarlight==2.0
-zope.interface==4.4.3
+zbarlight==2.1
