--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,67 @@
+backcall==0.1.0
+bleach==2.1.3
 cachetools==2.1.0
 certifi==2018.4.16
 chardet==3.0.4
+decorator==4.3.0
 dropbox==8.9.0
+entrypoints==0.2.3
 et-xmlfile==1.0.1
 google-api-python-client==1.7.3
 google-auth==1.5.0
 google-auth-httplib2==0.0.3
+html5lib==1.0.1
 httplib2==0.11.3
 idna==2.6
+ipykernel==4.8.2
+ipython==6.4.0
+ipython-genutils==0.2.0
+ipywidgets==7.2.1
 jdcal==1.4
+jedi==0.12.0
 Jinja2==2.10
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
 MarkupSafe==1.0
+mistune==0.8.3
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.5.0
 numpy==1.14.4
 oauth2client==4.1.2
 openpyxl==2.5.4
 pandas==0.23.0
+pandocfilters==1.4.2
+parso==0.2.1
+pexpect==4.6.0
+pickleshare==0.7.4
 Pillow==5.1.0
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
 pyasn1==0.4.3
 pyasn1-modules==0.2.1
+Pygments==2.2.0
 python-dateutil==2.7.3
 python-dotenv==0.8.2
 pytz==2018.4
+pyzmq==17.0.0
+qtconsole==4.3.1
 requests==2.18.4
 rsa==3.4.2
+Send2Trash==1.5.0
+simplegeneric==0.8.1
 six==1.11.0
+terminado==0.8.1
+testpath==0.3.1
+tornado==5.0.2
+traitlets==4.3.2
 uritemplate==3.0.0
 urllib3==1.22
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.2.1
+yapf==0.22.0
 zbarlight==2.1
