--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+asn1crypto==0.24.0
+attrs==18.1.0
+Automat==0.7.0
 backcall==0.1.0
 bleach==2.1.3
 cachetools==2.1.0
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
+constantly==15.1.0
+cryptography==2.3
+cssselect==1.0.3
 decorator==4.3.0
 dropbox==8.9.0
 entrypoints==0.2.3
@@ -12,7 +19,9 @@ google-auth==1.5.0
 google-auth-httplib2==0.0.3
 html5lib==1.0.1
 httplib2==0.11.3
+hyperlink==18.0.0
 idna==2.6
+incremental==17.5.0
 ipykernel==4.8.2
 ipython==6.4.0
 ipython-genutils==0.2.0
@@ -25,6 +34,7 @@ jupyter==1.0.0
 jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
+lxml==4.2.4
 MarkupSafe==1.0
 mistune==0.8.3
 nbconvert==5.3.1
@@ -35,6 +45,7 @@ oauth2client==4.1.2
 openpyxl==2.5.4
 pandas==0.23.0
 pandocfilters==1.4.2
+parsel==1.5.0
 parso==0.2.1
 pexpect==4.6.0
 pickleshare==0.7.4
@@ -43,25 +54,36 @@ prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 pyasn1==0.4.3
 pyasn1-modules==0.2.1
+pycparser==2.18
+PyDispatcher==2.0.5
 Pygments==2.2.0
+PyHamcrest==1.9.0
+pyOpenSSL==18.0.0
 python-dateutil==2.7.3
 python-dotenv==0.8.2
 pytz==2018.4
 pyzmq==17.0.0
 qtconsole==4.3.1
+queuelib==1.5.0
 requests==2.18.4
 rsa==3.4.2
+Scrapy==1.5.1
 Send2Trash==1.5.0
+service-identity==17.0.0
 simplegeneric==0.8.1
 six==1.11.0
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.0.2
 traitlets==4.3.2
+Twisted==18.7.0
 uritemplate==3.0.0
 urllib3==1.22
+w3lib==1.19.0
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.2.1
+xlrd==1.1.0
 yapf==0.22.0
 zbarlight==2.1
+zope.interface==4.5.0
