--- a/requirements.txt
+++ b/requirements.txt
@@ -4,30 +4,30 @@ Automat==0.7.0
 backcall==0.1.0
 bleach==2.1.3
 cachetools==2.1.0
-certifi==2018.4.16
+certifi==2018.8.13
 cffi==1.11.5
 chardet==3.0.4
 constantly==15.1.0
-cryptography==2.3
+cryptography==2.3.1
 cssselect==1.0.3
 decorator==4.3.0
-dropbox==8.9.0
+dropbox==9.0.0
 entrypoints==0.2.3
 et-xmlfile==1.0.1
-google-api-python-client==1.7.3
-google-auth==1.5.0
+google-api-python-client==1.7.4
+google-auth==1.5.1
 google-auth-httplib2==0.0.3
 html5lib==1.0.1
 httplib2==0.11.3
 hyperlink==18.0.0
-idna==2.6
+idna==2.7
 incremental==17.5.0
 ipykernel==4.8.2
-ipython==6.4.0
+ipython==6.5.0
 ipython-genutils==0.2.0
-ipywidgets==7.2.1
+ipywidgets==7.4.0
 jdcal==1.4
-jedi==0.12.0
+jedi==0.12.1
 Jinja2==2.10
 jsonschema==2.6.0
 jupyter==1.0.0
@@ -39,33 +39,34 @@ MarkupSafe==1.0
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
-notebook==5.5.0
-numpy==1.14.4
+notebook==5.6.0
+numpy==1.15.0
 oauth2client==4.1.2
-openpyxl==2.5.4
-pandas==0.23.0
+openpyxl==2.5.5
+pandas==0.23.4
 pandocfilters==1.4.2
 parsel==1.5.0
-parso==0.2.1
+parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
-Pillow==5.1.0
+Pillow==5.2.0
+prometheus-client==0.3.1
 prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-pyasn1==0.4.3
-pyasn1-modules==0.2.1
+ptyprocess==0.6.0
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
 pycparser==2.18
 PyDispatcher==2.0.5
 Pygments==2.2.0
 PyHamcrest==1.9.0
 pyOpenSSL==18.0.0
 python-dateutil==2.7.3
-python-dotenv==0.8.2
-pytz==2018.4
-pyzmq==17.0.0
-qtconsole==4.3.1
+python-dotenv==0.9.1
+pytz==2018.5
+pyzmq==17.1.2
+qtconsole==4.4.0
 queuelib==1.5.0
-requests==2.18.4
+requests==2.19.1
 rsa==3.4.2
 Scrapy==1.5.1
 Send2Trash==1.5.0
@@ -74,15 +75,15 @@ simplegeneric==0.8.1
 six==1.11.0
 terminado==0.8.1
 testpath==0.3.1
-tornado==5.0.2
+tornado==5.1
 traitlets==4.3.2
 Twisted==18.7.0
 uritemplate==3.0.0
-urllib3==1.22
+urllib3==1.23
 w3lib==1.19.0
 wcwidth==0.1.7
 webencodings==0.5.1
-widgetsnbextension==3.2.1
+widgetsnbextension==3.4.0
 xlrd==1.1.0
 yapf==0.22.0
 zbarlight==2.1
