Remove unused libraries

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ venv/
 
 old/
 
-output/*
+output/
 !output/.gitkeep
 
 .ipynb_checkpoints
@@ -15,18 +15,19 @@ __pycache__
 
 junk*
 temp/
+notebooks/
 
-data/external/*
+data/external/
 !data/external/.gitkeep
-data/interim/*
+data/interim/
 !data/interim/.gitkeep
-data/processed/*
+data/processed/
 !data/processed/.gitkeep
-data/raw/*
+data/raw/
 !data/raw/.gitkeep
-data/secrets/*
+data/secrets/
 !data/secrets/.gitkeep
 
 # Temporarily hide Julia code
-julia/*
+julia/
 *.toml
