--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 cachetools==2.1.0
+et-xmlfile==1.0.1
 google-api-python-client==1.7.4
 google-auth==1.5.1
 google-auth-httplib2==0.0.3
 httplib2==0.11.3
+jdcal==1.4
 Jinja2==2.10
 MarkupSafe==1.0
 numpy==1.15.1
 oauth2client==4.1.2
+openpyxl==2.5.5
 pandas==0.23.4
 Pillow==5.2.0
 pyasn1==0.4.4
@@ -18,4 +21,5 @@ selenium==3.14.0
 six==1.11.0
 uritemplate==3.0.0
 urllib3==1.23
+xlrd==1.1.0
 zbarlight==2.1
