--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,21 @@ data/secrets/
 # Julia code
 julia/
 *.toml
+
+dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
