--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,43 @@
+astroid==2.2.5
+autopep8==1.4.4
 cachetools==3.1.0
 et-xmlfile==1.0.1
-google-api-python-client==1.7.8
+future==0.17.1
+google-api-python-client==1.7.9
 google-auth==1.6.3
 google-auth-httplib2==0.0.3
-httplib2==0.12.1
-jdcal==1.4
+httplib2==0.12.3
+isort==4.3.20
+jdcal==1.4.1
+jedi==0.13.3
 Jinja2==2.10.1
+lazy-object-proxy==1.4.1
 MarkupSafe==1.1.1
-numpy==1.16.2
+mccabe==0.6.1
+numpy==1.16.3
 oauth2client==4.1.3
 openpyxl==2.6.2
 pandas==0.24.2
+parso==0.4.0
 Pillow==6.0.0
+pluggy==0.11.0
 pyasn1==0.4.5
-pyasn1-modules==0.2.4
+pyasn1-modules==0.2.5
+pycodestyle==2.5.0
+pydocstyle==3.0.0
+pyflakes==2.1.1
+pylint==2.3.1
 python-dateutil==2.8.0
+python-jsonrpc-server==0.1.2
+python-language-server==0.26.1
 pytz==2019.1
+rope==0.14.0
 rsa==4.0
 six==1.12.0
+snowballstemmer==1.2.1
+typed-ast==1.3.5
 uritemplate==3.0.0
+wrapt==1.11.1
 xlrd==1.2.0
+yapf==0.27.0
 zbarlight==2.3
