--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 astroid==2.2.5
 autopep8==1.4.4
-cachetools==3.1.0
+cachetools==3.1.1
 et-xmlfile==1.0.1
 future==0.17.1
 google-api-python-client==1.7.9
 google-auth==1.6.3
 google-auth-httplib2==0.0.3
 httplib2==0.12.3
+importlib-metadata==0.15
 isort==4.3.20
 jdcal==1.4.1
 jedi==0.13.3
@@ -14,13 +15,13 @@ Jinja2==2.10.1
 lazy-object-proxy==1.4.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
-numpy==1.16.3
+numpy==1.16.4
 oauth2client==4.1.3
 openpyxl==2.6.2
 pandas==0.24.2
 parso==0.4.0
 Pillow==6.0.0
-pluggy==0.11.0
+pluggy==0.12.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pycodestyle==2.5.0
@@ -41,3 +42,4 @@ wrapt==1.11.1
 xlrd==1.2.0
 yapf==0.27.0
 zbarlight==2.3
+zipp==0.5.1
