--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
 cachetools==3.1.1
 et-xmlfile==1.0.1
 google-api-python-client==1.7.11
-google-auth==1.6.3
+google-auth==1.7.1
 google-auth-httplib2==0.0.3
 httplib2==0.14.0
 jdcal==1.4.1
-Jinja2==2.10.1
+Jinja2==2.10.3
 MarkupSafe==1.1.1
-numpy==1.17.2
+numpy==1.17.4
 oauth2client==4.1.3
 openpyxl==3.0.0
-pandas==0.25.1
-Pillow==6.2.0
+pandas==0.25.3
+Pillow==6.2.1
 pyasn1==0.4.7
-pyasn1-modules==0.2.6
-python-dateutil==2.8.0
-pytz==2019.2
+pyasn1-modules==0.2.7
+python-dateutil==2.8.1
+pytz==2019.3
 rsa==4.0
-six==1.12.0
+six==1.13.0
 uritemplate==3.0.0
+xlrd==1.2.0
 zbarlight==2.3
