Add color adjustment utility

--- a/.gitignore
+++ b/.gitignore
@@ -21,14 +21,7 @@ old/
 temp/
 
 # Data files
-data/raw/
-data/interim
-data/temp
-!data/temp/.gitkeep
-data/processed/
-!data/processed/.gitkeep
-data/secrets/
-!data/secrets/.gitkeep
+data/
 
 dependencies
 /node_modules
