--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
-cachetools==4.1.0
-et-xmlfile==1.0.1
-google-api-python-client==1.8.2
-google-auth==1.14.1
-google-auth-httplib2==0.0.3
-httplib2==0.18.0
-jdcal==1.4.1
-Jinja2==2.11.2
-jupyter==1.0.0
-MarkupSafe==1.1.1
-matplotlib==3.2.1
-numpy==1.18.3
-oauth2client==4.1.3
-opencv-python==4.2.0.34
-openpyxl==3.0.3
-pandas==1.0.3
-Pillow==7.1.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-python-dateutil==2.8.1
-pytz==2019.3
-rsa==4.0
-six==1.14.0
-tqdm==4.45.0
-uritemplate==3.0.1
-xlrd==1.2.0
-zbar-py==1.0.4
-zbarlight==3.0
+cachetools~=4.1.0
+et-xmlfile~=1.0.1
+google-api-python-client~=1.8.2
+google-auth~=1.14.1
+google-auth-httplib2~=0.0.3
+httplib2~=0.18.0
+jdcal~=1.4.1
+Jinja2~=2.11.2
+jupyter~=1.0.0
+MarkupSafe~=1.1.1
+matplotlib~=3.2.1
+numpy~=1.18.3
+oauth2client~=4.1.3
+opencv-python~=4.2.0.34
+openpyxl~=3.0.3
+pandas~=1.0.3
+Pillow~=7.1.1
+pyasn1~=0.4.8
+pyasn1-modules~=0.2.8
+python-dateutil~=2.8.1
+pytz~=2019.3
+rsa~=4.0
+six~=1.14.0
+tqdm~=4.45.0
+uritemplate~=3.0.1
+xlrd~=1.2.0
+zbar-py~=1.0.4
+zbarlight~=3.0
