--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,10 @@ MarkupSafe~=1.1.1
 matplotlib~=3.3.2
 numpy~=1.19.1
 oauth2client~=4.1.3
-opencv-python~=4.3.0.36
+opencv-python
 openpyxl~=3.0.4
 pandas~=1.1.0
-Pillow~=8.2.0
+Pillow
 pyasn1~=0.4.8
 pyasn1-modules~=0.2.8
 python-dateutil~=2.8.1
