--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,15 @@ google-auth~=1.20.0
 google-auth-httplib2~=0.0.4
 httplib2~=0.19.0
 jdcal~=1.4.1
-Jinja2~=2.11.2
-jupyter~=1.0.0
+Jinja2
+jupyter
 MarkupSafe~=1.1.1
-matplotlib~=3.3.2
-numpy~=1.19.1
+matplotlib
+numpy
 oauth2client~=4.1.3
 opencv-python
 openpyxl~=3.0.4
-pandas~=1.1.0
+pandas
 Pillow
 pyasn1~=0.4.8
 pyasn1-modules~=0.2.8
@@ -21,8 +21,8 @@ python-dateutil~=2.8.1
 pytz~=2020.1
 rsa~=4.6
 six~=1.15.0
-tqdm~=4.50.2
+tqdm
 uritemplate~=3.0.1
 xlrd~=1.2.0
-zbar-py~=1.0.4
-zbarlight~=3.0
+zbar-py
+zbarlight
